@@ -4,7 +4,9 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.UUID;
 
 @Component
@@ -13,7 +15,7 @@ public class FileStorageUtil {
     // Hàm lưu file vào thư mục chỉ định
     public String saveFile(MultipartFile file, String subFolder) {
         // Tạo đường dẫn: uploads/subFolder (ví dụ: uploads/submissions)
-        Path rootLocation = Paths.get("uploads/" + subFolder);
+        Path rootLocation = Path.of("uploads/" + subFolder);
         
         // Tạo tên file ngẫu nhiên: UUID_tenfilegoc.pdf
         String fileName = UUID.randomUUID().toString() + "_" + file.getOriginalFilename();
